<resources>
    <string name="app_name">Sagor</string>
    <string name="google_search_key" translatable="false">AIzaSyDBSJHP0VzS2-eq7PBebVVDMhjvKUgTx9Q</string>
    <string name="welcome_to">Welcome to</string>
    <string name="select_your_preferred_language">Select your preferred\n language</string>
    <string name="english">English</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_lang">العربية</string>
    <string name="next">Next</string>
    <string name="choose_your_destination">Choose your <b>Destination</b></string>
    <string name="book_the_whole_bus_in_a_matter_of_clicks">Book the whole Bus in\n a matter of clicks</string>
    <string name="checkout_amp_pay">Checkout &amp; <b>Pay</b></string>
    <string name="complete_your_booking_securely_and_quickly">Complete your Booking\n securely and quickly</string>
    <string name="enjoy_the_trip">Enjoy the <b>Trip</b></string>
    <string name="embark_on_an_unforgettable_journey">Embark on an unforgettable\n journey</string>
    <string name="enter_your_mobile_number">Enter your Mobile number</string>
    <string name="this_number_will_used_for_all_sms_related_communication_you_will_receive_an_sms_verification_otp">This number will used for all SMS related communication. You will receive an SMS verification OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="term_title"> By checking this box, you agree to the</string>
    <string name="term_conditions"> terms and conditions</string>
    <string name="select_country">Select Country</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_4_digit_code_sent_to_you_at_9876_5432">Enter the 4-digit code sent to you at   </string>
    <string name="_continue">Continue</string>
    <string name="change_your_mobile_number"><u>Change your mobile number</u></string>
    <string name="resend_code">Resend code</string>
    <string name="_00_30">00:30</string>
    <string name="turn_on_your_notifications">Turn on your Notifications</string>
    <string name="you_ll_receive_updates_on_your_bus_route_including_delays_and_schedule_changes">You\'ll receive updates on your bus route, including delays and schedule changes</string>
    <string name="notify_me">Notify me</string>
    <string name="don_t_notify_me">Don\'t Notify me</string>
    <string name="turn_the_location_services">Turn the Location Services</string>
    <string name="this_will_help_sagor_to_take_your_current_location_while_booking_the_trip">This will help Sagor to take your current location while booking the trip</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="to_serve_you_better_we_need_few_of_your_basic_information">To serve you better, we need few of your basic information</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="home">Home</string>
    <string name="start_booking">Start Booking</string>
    <string name="top_offers">Top Offers</string>
    <string name="your_last_search">Your last Search</string>
    <string name="add_your_child">Add your Child</string>
    <string name="you_can_add_your_child_if_your_school_is_using_sagor_services">You can add your child if your school is using Sagor services</string>
    <string name="proceed">Proceed</string>
    <string name="don_t_show_this_message_again">Don\'t show this message again</string>
    <string name="select_your_ride">Select your ride</string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="total_distance">Total Distance</string>
    <string name="_1_5km">1.5KM</string>
    <string name="sunrise_restaurant">Sunrise Restaurant</string>
    <string name="phase_4_sheikh_zayed_bin_sultan_al_nahyan_rd_avenues_mall_92000">Phase 4, Sheikh Zayed Bin Sultan Al Nahyan Rd Avenues Mall, 92000</string>
    <string name="distance">Distance</string>
    <string name="your_location">Your Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="one_way">One way</string>
    <string name="round_trip">Round Trip</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="select_time_date"><![CDATA[Select Time & Date]]></string>
    <string name="book_your_ride">Book your Ride</string>
    <string name="recommended_bus">Recommended Bus</string>
    <string name="coaster">Coaster</string>
    <string name="_48_people_cap">48 People cap.</string>
    <string name="_20_00_kd">20.00 KD</string>
    <string name="select_date">Select Date</string>
    <string name="select_pickup_time">Select Pickup Time</string>
    <string name="submit">Submit</string>
    <string name="al_nouf_tower">Al Nouf Tower....</string>
    <string name="notes">Notes</string>
    <string name="the_cancellation_is_possible_before_24_hours_only">The cancellation is possible before 24 hours only</string>
    <string name="change">Change</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price</string>
    <string name="payout_with">Payout with</string>
    <string name="type">Type</string>
    <string name="promo">Promo</string>
    <string name="add_promo">Add Promo</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="promo_code">Promo Code</string>
    <string name="activate_code">Activate Code</string>
    <string name="my_ride">My Ride</string>
    <string name="double_decker">Double Decker</string>
    <string name="booked">Booked</string>
    <string name="booking_id_sag12345">Booking ID: </string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="_18th_april_2024">18th April 2024</string>
    <string name="_45_min">45 min</string>
    <string name="_50_seater">50 Seater</string>
    <string name="we_will_update_you_with_driver_s_contact_details">We will update you with driver’s contact details</string>
    <string name="request_successfully_placed">Request successfully Placed</string>
    <string name="go_to_home">Go to Home</string>
    <string name="ride_confirmed_on_19_march_2024">Ride Confirmed on <font color='#16A128'>19 March 2024</font></string>
    <string name="drivers_details">Drivers Details</string>
    <string name="hakim_alam">Hakim Alam</string>
    <string name="rating">Rating</string>
    <string name="bus_number">Bus number</string>
    <string name="kw_19_29388">KW 19, 29388</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="reschedule_ride">Reschedule Ride</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="cancel_my_ride">Cancel my ride</string>
    <string name="reasons_for_cancellation">Reasons for Cancellation</string>
    <string name="price_too_high">Price too High</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="trip_date">Trip Date</string>
    <string name="payment">Payment</string>
    <string name="bus_model">Bus Model</string>
    <string name="plate_number">Plate Number</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="report">Report</string>
    <string name="ride_in_progress">Ride in Progress</string>
    <string name="ride_completed">Ride Completed</string>
    <string name="your_have_arrived_at_your_destination">You have arrived at your Destination</string>
    <string name="arriving_time">Arriving Time</string>
    <string name="rate_your_trip">Rate your Trip</string>
    <string name="rate_your_experience">Rate your Experience</string>
    <string name="are_you_satisfied_with_the_drive">Are you Satisfied with the Drive</string>
    <string name="tell_us_what_can_be_improved">Tell us what can be Improved?</string>
    <string name="i_need_to_contact_support">I need to contact support</string>
    <string name="if_you_re_having_issues_with_a_trip_or_your_account_and_wish_to_speak_to_our_support_team_please_use_the_form_below_to_let_us_know_how_we_can_help">If you\'re having issues with a trip or your account and wish to speak to our Support team, please use the form below to let us know how we can help.</string>
    <string name="phone_number_on_your_account">Phone number on your account</string>
    <string name="account_and_payment_issues">Account and payment issues</string>
    <string name="trip_issues">Trip issues</string>
    <string name="find_lost_item">Find Lost Item</string>
    <string name="other">Other</string>
    <string name="description">Description</string>
    <string name="account_setting">Account Setting</string>
    <string name="my_profile_account"><![CDATA[My Profile & Account]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saved_places">Saved Places</string>
    <string name="notification">Notification</string>
    <string name="edit_mobile_number">Edit mobile Number</string>
    <string name="manage_your_child">Manage your Child</string>
    <string name="language">Language</string>
    <string name="more_info_support"><![CDATA[More Info & Support]]></string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="refund_policy">Refund Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="delete_my_account">Delete my Account</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="please_share_a_picture_and_all_relevant_details_we_ll_get_back_to_you_as_soon_as_we_can">Please share a picture and all relevant details. We\'ll get back to you as soon as we can.</string>
    <string name="sogar_never_ask_for_any_personal_information">Sagor never ask for any personal information</string>
    <string name="full_credit_card_details_pin_cvv_or_expiry_date">(Full credit card details, PIN, CVV, or Expiry date)</string>
    <string name="upload_limit_3">Upload limit:3</string>
    <string name="attach_a_picture">Attach a picture</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_yo_sure_you_want_to_log_out">Are yo sure you want to Log out</string>
    <string name="you_want_to_delete_account">you want to Delete Account</string>
    <string name="delete">Delete</string>
    <string name="school">School</string>
    <string name="grades">Grades</string>
    <string name="bus">Bus</string>
    <string name="child">Child</string>
    <string name="american_public_school">American Public School</string>
    <string name="grade">Grade</string>
    <string name="child_name">Child Name</string>
    <string name="add_to_my_list">Add to my list</string>
    <string name="active">Active</string>
    <string name="add_your_school_bus">Add your School bus</string>
    <string name="no_active_rides">No active Rides</string>
    <string name="track_your_bus">Track your bus</string>
    <string name="select_language">Select Language</string>
    <string name="pay">Pay</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="your_toekn_has_been_expired_please_login_again_to_continue_your_services">Your Toekn has been expired.Please Login again to continue your services</string>
    <string name="ok">Ok</string>
</resources>