<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/solid_white"

    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDialogTitle"
        style="@style/textViewPoppinSemiBold"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/select_language"
        android:textColor="@color/theme_blue"
        android:textSize="@dimen/tv_18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_25dp"
        android:layout_marginBottom="@dimen/_25dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/negativeButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNegetiveText"
                style="@style/textViewPoppinSemiBold"
                android:layout_width="120dp"
                android:layout_centerInParent="true"
                android:background="@drawable/solid_theme_blue"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_20dp"
                android:paddingVertical="@dimen/_10dp"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_15sp" />


        </RelativeLayout>

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:id="@+id/positiveButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_45dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPostiveText"
                style="@style/textViewPoppinSemiBold"
                android:layout_width="120dp"
                android:layout_centerInParent="true"
                android:background="@drawable/stroke_theme_blue"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_20dp"
                android:paddingVertical="@dimen/_10dp"
                android:text="@string/other_lang"
                android:textColor="@color/theme_blue"
                android:textSize="@dimen/tv_15sp" />


        </RelativeLayout>
    </LinearLayout>


</LinearLayout>